crates/solite-fmt/src/snapshots/solite_fmt__tests__keyword_as_column_replace.snap
---
source: crates/solite-fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- select replace from t

-- Output:
select replace from t;
