crates/solite-fmt/src/snapshots/solite_fmt__tests__keyword_as_column_row.snap
---
source: crates/solite-fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- select row from t

-- Output:
select row from t;
