crates/solite-fmt/src/snapshots/solite_fmt__tests__keyword_as_column_with_alias.snap
---
source: crates/solite-fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- select current as cur, action as act from t

-- Output:
select
  current as cur,
  action as act
from t;
