crates/solite-fmt/src/snapshots/solite_fmt__tests__keyword_as_create_table_column.snap
---
source: crates/solite-fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- create table t (current text, filter integer, action text, key text primary key)

-- Output:
create table t(
  current text,
  filter integer,
  action text,
  "key" text primary key
);
