crates/solite-fmt/src/snapshots/solite_fmt__tests__keyword_as_cte_name.snap
---
source: crates/solite-fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- with action as (select 1 as id) select * from action

-- Output:
with
  action as (
    select 1 as id
  )
select * from action;
