crates/solite-fmt/src/snapshots/solite_fmt__tests__keyword_as_function_call.snap
---
source: crates/solite-fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- select replace('hello world', 'world', 'there')

-- Output:
select replace('hello world', 'world', 'there');
