crates/solite-fmt/src/snapshots/solite_fmt__tests__keyword_as_index_column.snap
---
source: crates/solite-fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- create index idx_action on events (action, current)

-- Output:
create index idx_action on events(action, current);
