crates/solite-fmt/src/snapshots/solite_fmt__tests__keyword_as_insert_column.snap
---
source: crates/solite-fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- insert into t (current, filter, action) values (1, 2, 3)

-- Output:
insert into t(current, filter, action)
values
  (1, 2, 3);
